# rust-audio-toolkit

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
afx-song-file-toolkit/: Cargo.toml  README.md
afx-song-file-toolkit/doc/: psarc.md
afx-song-file-toolkit/src/: main.rs
examples/: demo.rs  fft.ipynb  fft.py  fft.rs  notes.rs  plot_data.py  rat_notes.py  tuner.rs
examples/data/: aubionotes_c3-major-scale-piano.wav.txt  aubiopitch_c3-major-scale-piano.wav.txt  c3-major-scale-piano.freq.txt  notes.txt
realtime-audio-rs/: Cargo.toml  README.md
realtime-audio-rs/scripts/: app.py  fast-fourier-transform.py  fft_simple.py  notes.json  notes.txt
realtime-audio-rs/src/: main.rs
rta/src/: main.rs
scripts/: fast-fourier-transform.py  plot-test.py  psarc.py
src/: app.rs  device_audio.rs  lib.rs  main.rs  notes.rs  psarc.rs
src/psarc/: Cargo.toml
src/rta/: .gitattributes  Cargo.toml  README.md
src/rta/doc/: fourier-analysis.md
src/rta/scripts/: fft_simple.py  notes.json
src/rta/src/: main.rs
tests/: my_test.rs
