[package]
name = "rta"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hound = "3.5"
cpal = "0.14"
pitch-detection = "0.3.0"
anyhow = "1.0"
binrw = "0.10"
aes = "0.8.2"
cfb-mode = "0.8.2"
flate2 = "1.0"
pretty_env_logger = "0.4"
log = "0.4"

rasciigraph = "0.1.1" # dev dependency; temporary
