[package]
name = "rta"
version = "0.2.0"
authors = ["Daniel Livingston <daniel.livingston@live.com>"]
edition = "2021"
rust-version = "1.65"

[lib]
name = "rta"
path = "src/lib.rs"

[dependencies]
# Audio input / output
clap = { version = "4.0", features = ["derive"] }
hound = "3.5"
cpal = "0.14"

# Audio analysis
rustfft = "6.1.0"
pitch-detection = "0.3.0"
anyhow = "1.0"
binrw = "0.10"
aes = "0.8.2"
cfb-mode = "0.8.2"
flate2 = "1.0"
pretty_env_logger = "0.4"
log = "0.4"

num-traits = "0.2.15"

[dev-dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend
    "persistence"    # Enable restoring app state on app restart
] }
rfd = "0.11" # Cross-platform file picker
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tracing-subscriber = "0.3"
